// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aa check blur for input 1`] = `
Object {
  "data": null,
  "inputs": Array [
    Object {
      "error": null,
      "value": "",
    },
    Object {
      "error": null,
      "value": "",
    },
    Object {
      "error": null,
      "value": "",
    },
  ],
}
`;

exports[`aa check blur for input 2`] = `
Object {
  "data": null,
  "inputs": Array [
    Object {
      "error": "Oczekiwano poprawnej daty",
      "value": "",
    },
    Object {
      "error": null,
      "value": "",
    },
    Object {
      "error": null,
      "value": "",
    },
  ],
}
`;

exports[`aa check blur for input 3`] = `
Object {
  "data": null,
  "inputs": Array [
    Object {
      "error": "Oczekiwano poprawnej daty",
      "value": "1322",
    },
    Object {
      "error": null,
      "value": "",
    },
    Object {
      "error": null,
      "value": "",
    },
  ],
}
`;

exports[`aa check blur for input 4`] = `
Object {
  "data": null,
  "inputs": Array [
    Object {
      "error": null,
      "value": "1410",
    },
    Object {
      "error": null,
      "value": "",
    },
    Object {
      "error": null,
      "value": "",
    },
  ],
}
`;
